--- a/HurricaneDDS.vcxproj
+++ b/HurricaneDDS.vcxproj
@@ -182,6 +182,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DDSDatabaseConnection.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DDSDatabaseConnectionPool.h">
       <SubType>
       </SubType>
@@ -200,6 +204,7 @@
     </ClInclude>
     <ClInclude Include="DDSDataObjectStoreBase.h" />
     <ClInclude Include="DDSDataObjectStoreHelpers.h" />
+    <ClInclude Include="DDSDataObjectStoreTemporary.h" />
     <ClInclude Include="DDSDataObjectTypeList.h" />
     <ClInclude Include="DDSDeferredCallback.h" />
     <ClInclude Include="DDSDeferredCallbackSystem.h">
@@ -381,6 +386,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="DDSDatabaseBootstrap.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="DDSDatabaseConnection.cpp">
       <SubType>
       </SubType>
     </ClCompile>
